syntax = "proto3";
package icbt.rpc.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "icbt/rpc/v1/event.proto";
import "icbt/rpc/v1/pagination.proto";

/** Common Types **/

message Favorite {
  string event_ref_id = 1; // event ref-id
  google.protobuf.Timestamp created = 2;
}

/** Method specific types **/

message FavoriteAddRequest {
  string event_ref_id = 1 [(buf.validate.field).cel = {
    id: "refid.format"
    message: "must be in refid format"
    expression: "this.matches('^[0-9a-zA-Z]{26}$')"
  }];
}

message FavoriteAddResponse {
  Favorite favorite = 1;
}

message FavoriteRemoveRequest {
  string event_ref_id = 1 [(buf.validate.field).cel = {
    id: "refid.format"
    message: "must be in refid format"
    expression: "this.matches('^[0-9a-zA-Z]{26}$')"
  }];
}

message FavoriteListEventsRequest {
  optional icbt.rpc.v1.PaginationRequest pagination = 1;
  optional bool archived = 2;
}

message FavoriteListEventsResponse {
  repeated icbt.rpc.v1.Event events = 1;
  optional icbt.rpc.v1.PaginationResult pagination = 2;
}
